--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,11 +9,6 @@
 
     @include font-size(14px);
   }
-
-  .dropdown-menu {
-    max-height: 205px;
-    overflow-y: scroll;
-  }
 }
 
 .navbar-brand {
